todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-app-volume
          persistentVolumeClaim:
            claimName: pv-claim
      containers:
        - name: todo-app
          image: ykhaliuk/todo-app
          volumeMounts:
            - name: todo-app-volume
              mountPath: /opt/app/images
